Java 11 (LTS)
Signed-off-by: Thibault Meyer <meyer.thibault@gmail.com>